# bin

./: Makefile  README.md  install.sh  pyproject.toml
Formula/: bin.rb
src/: ai.sh  anytest.sh  catmd.sh  decrypt.sh  encrypt.sh  fs.py  git-submodule-rm.sh  linkbuild.sh  pyscript.py  rsed.sh  twitter-dl.py
tests/: test_cli.py  test_fs.py
